setup simple crud

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,13 @@
 
+#mybatis
+mybatis.type-aliases-package=com.mybatisgenerator.crud.biz.dto
+mybatis.mapper-locations=classpath*:mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
 # DataSource configuration
 server.port=9195
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5000/crud-generator
+spring.datasource.url=jdbc:postgresql://localhost:5000/mybatis-crud-generator
 spring.datasource.username=postgres
 spring.datasource.password=eco
 spring.sql.init.mode=always
