--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ dependencies {
 	implementation "org.mapstruct:mapstruct:$mapstructVersion"
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'org.springframework.data:spring-data-commons:2.7.5'
+    implementation 'org.projectlombok:lombok:1.18.22'
 
-	compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
